--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Página Home</h1>
+    <p>Bem vindo</p>
     <a href="vendas.html">Ir para a página de vendas</a>
 </body>
 </html>
